<resources>
    <string name="app_name">MotionLayoutExample</string>
    <string name="setup">Setup</string>
    <string name="select">Select</string>
    <string name="setup_device">Setup Device</string>
    <string name="device_password">Enter Device Password</string>
    <string name="device_name">Device Name</string>
    <string name="water_tank_device_setting">Water Tank Device Setting</string>
    <string name="total_height">Total Height</string>
    <string name="minimum_height">Minimum Height</string>
    <string name="distance_height">Distance Height</string>
    <string name="save">Save</string>
    <string name="login">Login</string>
    <string name="device_setting">Device Setting</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
